initial fix for form layout on smaller viewports

--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -20,11 +20,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  height: 100%;
 }
 
 mat-form-field{
-  width: 50%;
+  width: 70%;
 }
 
 button{
@@ -55,6 +55,17 @@ mat-card{
   justify-content: space-between;
 }
 
+
+button{
+  min-height: 35px;
+}
+
+.ingredient-input{
+  display: flex;
+  width: 70%;
+  min-height: 65.5px;
+}
+
 @media(max-width: 600px){
   mat-card{
     width: 100%;
@@ -64,6 +75,10 @@ mat-card{
   }
 
   mat-form-field{
+    width: 90%;
+  }
+
+  .ingredient-input{
     width: 90%;
   }
 
